# Lazypub

./: .gitignore  PKGBUILD  PROJECT-DESC.md  README.md  ai_test_results.json  package.json
.github/workflows/: release.yml
arch-build/: .SRCINFO  LICENSE  PKGBUILD
src/: App.css  App.tsx  index.css  thinkingPhrases.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  epub.rs  glossary.rs  lib.rs  main.rs  wiki.rs
src/components/: Editor.tsx  ImagePreview.tsx  LoadingOverlay.css  LoadingOverlay.tsx  Preview.tsx  Scratchpad.tsx  SettingsModal.tsx  Sidebar.tsx  TermEditorModal.tsx  XhtmlDebugger.css  XhtmlDebugger.tsx
