[package]
name = "lazypub"
version = "0.1.7"
description = "A Tauri-based EPUB processing and translation suite"
license = "MIT"
authors = ["you"]
edition = "2021"

[lib]
name = "lazypub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
quick-xml = "0.37"
tempfile = "3"
thiserror = "2"
base64 = "0.22.1"
tauri-plugin-store = "2"
reqwest = { version = "0.13.2", features = ["json", "rustls", "query"] }
tokio = "1.50.0"
